--- a/src/app/_components/item-detail/item-detail.component.html
+++ b/src/app/_components/item-detail/item-detail.component.html
@@ -139,7 +139,7 @@
             item.price | currency: "₺"
             }}</i>
         </p>
-        <button type="submit" class="w3ls-cart">Karta ekle</button>
+        <button type="submit" class="w3ls-cart" (click)="addToCart(item)">Karta ekle</button>
       </div>
 
     </div>
@@ -184,7 +184,7 @@
           <h4>(2) Reviews</h4>
           <div class="additional_info_sub_grids">
             <div class="col-xs-2 additional_info_sub_grid_left">
-              <img src="images/t1.png" alt=" " class="img-responsive" />
+              <img src="assets/images/t1.png" alt=" " class="img-responsive" />
             </div>
             <div class="col-xs-10 additional_info_sub_grid_right">
               <div class="additional_info_sub_grid_rightl">
@@ -200,30 +200,30 @@
                 <div class="rating">
                   <div class="rating-left">
                     <img
-                      src="images/star-.png"
+                      src="assets/images/star-.png"
                       alt=" "
                       class="img-responsive"
                     />
                   </div>
                   <div class="rating-left">
                     <img
-                      src="images/star-.png"
+                      src="assets/images/star-.png"
                       alt=" "
                       class="img-responsive"
                     />
                   </div>
                   <div class="rating-left">
                     <img
-                      src="images/star-.png"
+                      src="assets/images/star-.png"
                       alt=" "
                       class="img-responsive"
                     />
                   </div>
                   <div class="rating-left">
-                    <img src="images/star.png" alt=" " class="img-responsive" />
+                    <img src="assets/images/star.png" alt=" " class="img-responsive" />
                   </div>
                   <div class="rating-left">
-                    <img src="images/star.png" alt=" " class="img-responsive" />
+                    <img src="assets/images/star.png" alt=" " class="img-responsive" />
                   </div>
                   <div class="clearfix"></div>
                 </div>
@@ -234,7 +234,7 @@
           </div>
           <div class="additional_info_sub_grids">
             <div class="col-xs-2 additional_info_sub_grid_left">
-              <img src="images/t2.png" alt=" " class="img-responsive" />
+              <img src="assets/images/t2.png" alt=" " class="img-responsive" />
             </div>
             <div class="col-xs-10 additional_info_sub_grid_right">
               <div class="additional_info_sub_grid_rightl">
@@ -250,26 +250,26 @@
                 <div class="rating">
                   <div class="rating-left">
                     <img
-                      src="images/star-.png"
+                      src="assets/images/star-.png"
                       alt=" "
                       class="img-responsive"
                     />
                   </div>
                   <div class="rating-left">
                     <img
-                      src="images/star-.png"
+                      src="assets/images/star-.png"
                       alt=" "
                       class="img-responsive"
                     />
                   </div>
                   <div class="rating-left">
-                    <img src="images/star.png" alt=" " class="img-responsive" />
+                    <img src="assets/images/star.png" alt=" " class="img-responsive" />
                   </div>
                   <div class="rating-left">
-                    <img src="images/star.png" alt=" " class="img-responsive" />
+                    <img src="assets/images/star.png" alt=" " class="img-responsive" />
                   </div>
                   <div class="rating-left">
-                    <img src="images/star.png" alt=" " class="img-responsive" />
+                    <img src="assets/images/star.png" alt=" " class="img-responsive" />
                   </div>
                   <div class="clearfix"></div>
                 </div>
@@ -341,7 +341,7 @@ Add Your Review</textarea
       <section>
         <div class="modal-body">
           <div class="col-md-5 modal_body_left">
-            <img src="images/34.jpg" alt=" " class="img-responsive" />
+            <img src="assets/images/34.jpg" alt=" " class="img-responsive" />
           </div>
           <div class="col-md-7 modal_body_right">
             <h4>Musical Kids Toy</h4>
@@ -354,19 +354,19 @@ Add Your Review</textarea
             </p>
             <div class="rating">
               <div class="rating-left">
-                <img src="images/star-.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star-.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star-.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star-.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star-.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star-.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star.png" alt=" " class="img-responsive" />
               </div>
               <div class="clearfix"></div>
             </div>
@@ -415,7 +415,7 @@ Add Your Review</textarea
       <section>
         <div class="modal-body">
           <div class="col-md-5 modal_body_left">
-            <img src="images/36.jpg" alt=" " class="img-responsive" />
+            <img src="assets/images/36.jpg" alt=" " class="img-responsive" />
           </div>
           <div class="col-md-7 modal_body_right">
             <h4>Dry Vacuum Cleaner</h4>
@@ -428,19 +428,19 @@ Add Your Review</textarea
             </p>
             <div class="rating">
               <div class="rating-left">
-                <img src="images/star-.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star-.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star-.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star-.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star-.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star-.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star.png" alt=" " class="img-responsive" />
               </div>
               <div class="clearfix"></div>
             </div>
@@ -489,7 +489,7 @@ Add Your Review</textarea
       <section>
         <div class="modal-body">
           <div class="col-md-5 modal_body_left">
-            <img src="images/p3.jpg" alt=" " class="img-responsive" />
+            <img src="assets/images/p3.jpg" alt=" " class="img-responsive" />
           </div>
           <div class="col-md-7 modal_body_right">
             <h4>Music MP3 Player</h4>
@@ -502,19 +502,19 @@ Add Your Review</textarea
             </p>
             <div class="rating">
               <div class="rating-left">
-                <img src="images/star-.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star-.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star-.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star-.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star-.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star-.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star-.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star-.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star.png" alt=" " class="img-responsive" />
               </div>
               <div class="clearfix"></div>
             </div>
@@ -563,7 +563,7 @@ Add Your Review</textarea
       <section>
         <div class="modal-body">
           <div class="col-md-5 modal_body_left">
-            <img src="images/38.jpg" alt=" " class="img-responsive" />
+            <img src="assets/images/38.jpg" alt=" " class="img-responsive" />
           </div>
           <div class="col-md-7 modal_body_right">
             <h4>Kitchen &amp; Dining Accessories</h4>
@@ -576,19 +576,19 @@ Add Your Review</textarea
             </p>
             <div class="rating">
               <div class="rating-left">
-                <img src="images/star-.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star-.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star-.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star-.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star-.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star-.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star-.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star-.png" alt=" " class="img-responsive" />
               </div>
               <div class="rating-left">
-                <img src="images/star.png" alt=" " class="img-responsive" />
+                <img src="assets/images/star.png" alt=" " class="img-responsive" />
               </div>
               <div class="clearfix"></div>
             </div>
